[project]
name = "zendriver"
version = "0.1.0"
description = "A blazing fast, async-first, undetectable webscraping/web automation framework"
readme = "README.md"
authors = [
    { name = "Stephan Lensky", email = "oss@slensky.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.12"
dependencies = [
    "deprecated>=1.2.14",
    "mss>=9.0.2",
    "websockets>=13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "ruff>=0.7.0",
]

[tool.ruff]
exclude = ["zendriver/cdp"]

[tool.mypy]
exclude = "zendriver/cdp"
