[project]
name = "zendriver"
version = "0.2.0"
description = "A blazing fast, async-first, undetectable webscraping/web automation framework"
readme = "README.md"
authors = [{ name = "Stephan Lensky", email = "oss@slensky.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "asyncio-atexit>=1.0.1",
    "deprecated>=1.2.14",
    "mss>=9.0.2",
    "websockets>=13.1,<14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mkdocs-material>=9.5.42",
    "mkdocstrings[python]>=0.26.2",
    "mypy>=1.12.0",
    "pyyaml>=6.0.2",
    "ruff>=0.7.4",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20241016",
]

[tool.ruff.lint]
exclude = ["zendriver/cdp"]

[tool.mypy]
exclude = "zendriver/cdp"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "asyncio_atexit",
]
ignore_missing_imports = true
